--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <section class="content-header">
   <h1>
-    Blank page
-    <small>it all starts here</small>
+    Home Component
+    <small></small>
   </h1>
 </section>
 
@@ -23,7 +23,7 @@
       </div>
     </div>
     <div class="box-body">
-      Start creating your amazing application!
+      Body
     </div>
     <!-- /.box-body -->
     <div class="box-footer">
