--- a/src/app/projectperson/projectperson.component.html
+++ b/src/app/projectperson/projectperson.component.html
@@ -35,7 +35,7 @@
         </tr>
         <tr *ngFor="let person of persons | async">
           <td>
-            <img style="width: 50px;" src="http://localhost:8080/files/{{person.phuongPersonal.image}}" />
+            <img style="width: 50px;" src="http://10.225.3.91:8080/files/{{person.phuongPersonal.image}}" />
           </td>
           <td>
             {{person.phuongPersonal.name}}
